
Version 1.1.6
-------------

- support for Windows XP native look&feel
- Win32 version is now Unicode-enabled
- fixes to the way multiline entries are stored in .po file
- i18n support in the app itself (finally!)
  (so far only Czech translation is available, translators welcome!)
- added an option to display .po file line numbers for catalog entries
- fixed crash when browsing certain source files
- added ability to open refered source files directly in the editor of
  choice instead of in built-in files viewer
- fixed wrong placement of progress indicator in the status bar (Win32)


Version 1.1.5
-------------

- upgraded to link against any of libdb-3.{1,2,3}
- fixed bug when editing entries in editable listbox control (Win32)
- updated ISO 639-1 table
- visually improved listbox
- Win32 binary package is now cross-compiled with Mingw32
- fixed Unix makefile to not attempt to install KDE and/or GNOME entries
  if you doesn't have neccessary write permissions


Version 1.1.4
-------------

- fixed bug in Search when looking for strings with non-ASCII
  characters in them
- charset combobox in catalog settings now remember values


Version 1.1.3
-------------

- added ability to edit comments
- nicer icons by Dean S. Jones
- new source code references browser
- new keyboard navigation
- various UI improvements and bugfixes
- added catalogs manager for easier access to translator's files
- updated documentation


Version 1.1.2
-------------

- fixed incorrect update of TM database path setting from preferences dialog
- fixed assertion failures with empty catalog files when right-clicking 
  the list control
- changed default TM DB path to something more sane under Windows
- fixed directories traversal during TM update under Windows 


Version 1.1.1
-------------

- added support for semi-automatic translations using translation memory concept.
  Translation memory is an indexed database of all string-translation pairs found