@@ -1,5 +1,5 @@
 Maintainer:
-  Vaclav Slavik <v.slavik@volny.cz>
+  Vaclav Slavik <vaclav.slavik@matfyz.cz>
 
 Debian packager:
   Yooseong Yang <yooseong@debian.org>
