@@ -1,13 +1,11 @@
+
 Urgent:
 
-- add i18n support to poEdit *itself*
-- regular Unicode build of poEdit (wxUSE_UNICODE=1), using unicows.dll
 - automated translation during update should be marked as fuzzy!
 - use virtual wxListCtrl
 - plural handling (in wxWin, too), see info:/gettext/PO Files
 - remember the exact way msgid/msgstr was stored (where the boundaries between multiple
   lines are) and save it like that unless modified.
-
 
 Lower priority:
 
@@ -20,5 +18,4 @@ Lower priority:
 - reading MO files directly
 - handling of POT files (as an alternative to home-grown scanning)
 - configurable file extension of .mo file (.gmo)
-- add a sample .po file
 - when saving po files, write more references on one line
