@@ -58,54 +58,48 @@ AC_DEFUN(FIND_BERKELEY_DB,
 [
   USE_TRANSMEM=1
 
-  AC_CHECK_LIB(db-3.1, db_create,
-     [
-         DB_LIB=-ldb-3.1
-     ],
-     [
-         AC_CHECK_LIB(db, db_create,
-         [
-             DB_LIB=-ldb
-         ],
-         [
-             USE_TRANSMEM=0
-             AC_MSG_WARN([
-
-*** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** 
-
- Cannot find Berkeley DB 3.1, poEdit will build w/o translation memory feature!
-
-*** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** 
-
-             ])
-         ])
-     ])
-
   AC_CHECK_HEADER(db3/db.h,
      [
         CXXFLAGS="$CXXFLAGS -DUSE_REDHAT_DB3"
+        DB3HEADER="db3/db.h"
      ],
      [
         AC_CHECK_HEADER(db.h, [],
         [
            USE_TRANSMEM=0
+           DB3HEADER="db.h"
            AC_MSG_RESULT(not found)
            AC_MSG_WARN([
 
 *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** 
 
- Cannot find Berkeley DB 3.1, poEdit will build w/o translation memory feature!
+ Cannot find Berkeley DB 3.x, poEdit will build w/o translation memory feature!
 
 *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** 
 
            ])
         ])
      ])
+     
+  
+  AC_SEARCH_LIBS(db_create, db-3.6 db-3.5 db-3.4 db-3.3 db-3.2 db-3.1 db,
+     [],
+     [
+         USE_TRANSMEM=0
+         AC_MSG_WARN([
+
+*** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** 
+
+ Cannot find Berkeley DB 3.x, poEdit will build w/o translation memory feature!
+
+*** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** 
+
+         ])
+     ])
 
   if test x$USE_TRANSMEM != x0 ; then
       CXXFLAGS="$CXXFLAGS -DUSE_TRANSMEM"
   fi
-  LIBS="$LIBS $DB_LIB"
   CXXFLAGS="$CXXFLAGS $DB_INCLUDE"
 ])
 
