@@ -25,7 +25,7 @@ AC_ARG_ENABLE(transmem, [  --enable-transmem       Enable translation memory (de
               USE_TRANSMEM="$enableval", USE_TRANSMEM="yes")
 AC_ARG_ENABLE(debug, [  --enable-debug          Enable debugging information],
               USE_DEBUG="$enableval", USE_DEBUG="no")
-AC_ARG_ENABLE(semistatic, [  --enable-semistatic          Link statically against wxWindows and libdb],
+AC_ARG_ENABLE(semistatic, [  --enable-semistatic     Link statically against wxWindows and libdb],
               USE_SEMISTATIC="$enableval", USE_SEMISTATIC="no")
 
 AC_MSG_CHECKING(for install location)
@@ -93,8 +93,21 @@ else
 fi
 AM_CONDITIONAL(USE_WINDOWS, test $use_windows = yes)
 
+CATALOGS_TO_INSTALL="install-poedit-catalogs"
+
 if test x$USE_SEMISTATIC = xyes ; then
-    POEDIT_WX_LIBS="$WX_LIBS_STATIC"
+    CATALOGS_TO_INSTALL="$CATALOGS_TO_INSTALL install-wxstd-catalogs"
+
+    changequote(<<,>>)
+
+    dnl link libdb3 statically:
+    dnl (FIXME - this only works with gcc and gnu ld!)
+    LIBS=`echo $LIBS | sed -e 's/\(-ldb[^ ]*\)/-Wl,-Bstatic \1 -Wl,-Bdynamic/g'`
+
+    dnl ...and don't link libtiff, libjpeg, because we don't use them:
+    POEDIT_WX_LIBS=`echo $WX_LIBS_STATIC | sed -e 's/\(-ltiff\|-ljpeg\)//g'`
+
+    changequote([,])
 else
     POEDIT_WX_LIBS="$WX_LIBS"
 fi
@@ -107,6 +120,7 @@ AC_SUBST(RESCOMP)
 AC_SUBST(WX_CONFIG_NAME)
 AC_SUBST(POEDIT_WX_LIBS)
 AC_SUBST(RC_WX_INCLUDES)
+AC_SUBST(CATALOGS_TO_INSTALL)
 
 AC_OUTPUT([
          Makefile
@@ -118,6 +132,7 @@ AC_OUTPUT([
          extras/wx-contrib/src/xrc/expat/Makefile
          src/Makefile
          src/resources/Makefile
+         locales/Makefile
          docs/Makefile
          install/Makefile
          install/poedit.keys
