@@ -12,6 +12,8 @@ Version 1.1.6
 - added ability to open refered source files directly in the editor of
   choice instead of in built-in files viewer
 - fixed wrong placement of progress indicator in the status bar (Win32)
+- man page is now installed (Unix)
+- poEdit now links with libdb-3.x for x > 1, too (Unix)
 
 
 Version 1.1.5
@@ -71,7 +73,6 @@ Version 1.1.1
 
 Version 1.1.0
 -------------
-(this is the 1st version of new development series)
 
 - support for UTF-8
 - changes to make poEdit work correctly with gettext 0.10.37
